[INTERNAL][FIX] sap.uxap.ObjectPageHeader: text wrapping fix
Problem: CSS rule word-break: break-all means word can be broken
at any character

Solution: break-word value means more suitable breaking point
can be picked by the browser

BCP: 1980262085

--- a/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageHeader.less
+++ b/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageHeader.less
@@ -267,7 +267,7 @@ html[data-sap-ui-browser^=ie] .sapUxAPObjectPageHeaderObjectImageContainerSub > 
 
 .sapUxAPObjectPageLayout-Std-Phone .sapUxAPObjectPageHeaderTitleTextWrappable,
 html .sapUiContainer-Narrow .sapUxAPObjectPageHeaderTitleTextWrappable {
-	word-break: break-all;
+	word-break: break-word;
 }
 
 .sapUxAPObjectPageHeaderIdentifierTitle .sapMObjStatusMarker {
